# empece

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  errors.rs  main.rs  pretty.rs  types.rs  utils.rs
src/comps/: sortable.tsx
src/mpc/: types.ts
