[package]
name = "empece"
version = "0.0.0"
description = "MPC sequence reordering"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "shell-open"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_derive = "1.0.164"
quick-xml = { version = "0.28.2", features = ["serialize"] }
rand = "0.7.3"
thiserror = "1.0.40"
midly = "0.5.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
